# Tapas-Comic-Downloader

./: .gitignore  README.md  pyproject.toml
tapas_comic_downloader/: tapas_dl.py
