[tool.poetry]
name = "tapas_comic_downloader"
version = "0.1.0"
description = "This is a downloader to download whole comics from https://tapas.io/. (Not official!)"
authors = ["TilCreator", "Baduit"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pyquery = "^2.0.0"
argparse = "^1.4.0"
EbookLib = "^0.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tapas-dl = "tapas_comic_downloader.tapas_dl:main"
